      that is not run by default and primarily intended for the core
      developers.  To run them use
\preformatted{
	cd tests; make test-Internet-dev
}
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{.S3methods()}, typically called from \code{methods()},
      again marks methods from package \pkg{base} as \code{visible}.

      \item \code{tools::Rdiff()} is now more robust against invalid
      strings, fixing installation tests on Windows without Rtools
      installed (\PR{18530}).

      \item Fix (new) bug in \code{hcl.colors(2, *)}, by Achim Zeileis (\PR{18523}).

      \item \code{head(., <illegal>)} and \code{tail(..)} now produce
      more useful \code{"Error in ...."} error messages, fixing \PR{18362}.

      \item Package code syntax on Windows is checked in UTF-8 when UTF-8 is
      the native encoding.

      \item \code{na.contiguous(x)} now also returns the first run, when it
      is at the beginning and there is a later one of the same length;
      reported to R-devel, including a fix, by Georgi Boshnakov.
      Further, by default, it modifies only an existing
      \code{attr(*,"tsp")} but otherwise no longer sets one.

      \item \code{chol(<not pos.def>, pivot = <T|F>)} now gives a correct
      error or warning message (depending on \code{pivot}), thanks to
      Mikael Jagan's (\PR{18541}).
    }
  }
}

\section{\Rlogo CHANGES IN R 4.3.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item Calling \code{&&} or \code{||} with LHS or (if evaluated) RHS of
      length greater than one is now always an error, with a report of
      the form
\preformatted{    'length = 4' in coercion to 'logical(1)'}

      Environment variable \env{_R_CHECK_LENGTH_1_LOGIC2_} no longer has
      any effect.
    }
  }

  \subsection{NEW FEATURES}{
    \itemize{
      \item The included BLAS sources have been updated to those shipped
      with LAPACK version 3.10.1.  (This caused some platform-dependent